# CMakeTemplate

./: CMakeLists.txt
include/: TemplateLib.hpp
lib/Debug/: TemplateLib.ilk  TemplateLib.lib
src/: TemplateLib.cxx  main.cxx
